[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Store.gd" type="Script" id=2]
[ext_resource path="res://Images/Money.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Money.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/ButtonSound.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.45098, 0.113725, 0.847059, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Store" type="Node2D"]
script = ExtResource( 2 )

[node name="MoneySound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2, 0 )
stream = ExtResource( 4 )

[node name="Bg" type="Label" parent="."]
margin_left = 35.0
margin_top = 93.0
margin_right = 141.0
margin_bottom = 205.0
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Store" type="Label" parent="Bg"]
margin_right = 107.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Store"
align = 1
valign = 1

[node name="Ousadia" type="Label" parent="Bg"]
margin_top = 38.0
margin_right = 212.0
margin_bottom = 49.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Ousadia"
align = 1
valign = 3

[node name="Ice" type="Label" parent="Bg"]
margin_top = 73.0
margin_right = 212.0
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Ice"
align = 1
valign = 3

[node name="Coin" type="Sprite" parent="Bg"]
position = Vector2( 100, 8 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Money" type="Label" parent="Bg"]
margin_left = 88.0
margin_top = 4.99999
margin_right = 104.0
margin_bottom = 19.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "28"

[node name="Coin2" type="Sprite" parent="Bg"]
position = Vector2( 56, 49.2 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Money2" type="Label" parent="Bg"]
margin_left = 48.0
margin_top = 46.2
margin_right = 64.0
margin_bottom = 60.2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "7"

[node name="Coin3" type="Sprite" parent="Bg"]
position = Vector2( 58, 84.2 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Money3" type="Label" parent="Bg"]
margin_left = 45.0
margin_top = 81.2
margin_right = 61.0
margin_bottom = 95.2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "10"

[node name="OusadiaBtn" type="Button" parent="Bg"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 38.0
margin_top = 34.0
margin_right = 68.0
margin_bottom = 54.0

[node name="IceBtn" type="Button" parent="Bg"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 42.0
margin_top = 71.0
margin_right = 63.0
margin_bottom = 91.0

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ButtonSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="mouse_entered" from="Bg/OusadiaBtn" to="." method="_on_OusadiaBtn_mouse_entered"]
[connection signal="mouse_exited" from="Bg/OusadiaBtn" to="." method="_on_OusadiaBtn_mouse_exited"]
[connection signal="pressed" from="Bg/OusadiaBtn" to="." method="_on_OusadiaBtn_pressed"]
[connection signal="mouse_entered" from="Bg/IceBtn" to="." method="_on_IceBtn_mouse_entered"]
[connection signal="mouse_exited" from="Bg/IceBtn" to="." method="_on_IceBtn_mouse_exited"]
[connection signal="pressed" from="Bg/IceBtn" to="." method="_on_IceBtn_pressed"]
